<resources>
    <string name="app_name">TitiBank</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_condonar">Perdonar deuda</string>
    <string name="action_about">TitiBank</string>
    <string name="main_resumen_totalprestado">Total prestado</string>
    <string name="main_resumen_totaldevuelto">Ingresos realizados</string>
    <string name="main_resumen_pendiente">Pendiente actual</string>
    <string name="new_item_titulo">Nuevo movimiento</string>
    <string name="new_item_prestamo">El titi me deja</string>
    <string name="new_item_ingreso">Le devuelvo al titi</string>
    <string name="new_item_fecha">Fecha</string>
    <string name="new_item_importe">Importe</string>
    <string name="new_item_descripcion">Descripcion</string>
    <string name="new_item_nota">Nota</string>
    <string name="new_item_guardar">Guardar</string>
    <string name="new_item_cancelar">Cancelar</string>
    <string name="borrar_item_titulo">Borrar</string>
    <string name="borrar_item_descripcion">¿De verdad quieres borrar esto? Piensa que no hay vuelta de hoja...</string>
    <string name="borrar_boton_confirar">que síííí</string>
    <string name="borrar_boton_cancelar">Vaaale no</string>
    <string name="show_item_titulo_prestamo">El titi me dejó</string>
    <string name="show_item_titulo_ingreso">Le di al titi</string>
    <string name="show_item_nota_no_nota">-- sin nota --</string>
    <string name="ajustes_mensaje_titulo">Ajustes</string>
    <string name="ajustes_mensaje_descripcion">Se ajustará lo que se tenga que ajustar y callandico viva</string>
    <string name="condonar_mensaje_titulo">Perdonar deuda</string>
    <string name="condonar_mensaje_descripcion">Titi ya está bien. No seas cara dula</string>
    <string name="mensajes_chorras_aceptar">callandico</string>
    <string name="connect_fire_error">De alguna manera incomprensible, no hay conexión con los datos</string>
    <string name="toas_loading_main">Haciendo tabajela...</string>
    <string name="connect_error">Esto se ha ido de madre</string>
    <string name="autorizacion_error">Igual es un problema de usuario</string>
    <string name="copyrigth">SuperG © 2020</string>
    <string name="about_descripcion">Tu banco de confianza</string>
    <string name="about_version">v. 1.0.2</string>


</resources>
